# PaperEngine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  ReadMe.md  arch.txt  imgui.ini  nvrhiLearn.txt
PaperEngine/: CMakeLists.txt
PaperEngine-ScriptCore/: CMakeLists.txt
PaperEngine-ScriptCore/Source/: test.cs
PaperEngine/src/: pch.h
PaperEngine/src/PaperEngine/: PaperEngine.h
PaperEngine/src/PaperEngine/component/: CameraComponent.h  LightComponent.h  MeshComponent.h  TagComponent.h  TransformComponent.h
PaperEngine/src/PaperEngine/components/: IDComponent.h  LightComponent.h  MeshComponent.h  MeshRendererComponent.h  TagComponent.h
PaperEngine/src/PaperEngine/core/: Application.cpp  Application.h  Assert.h  Base.h  Core.cpp  Core.h  EntryPoint.h  GLFWWindow.cpp  GLFWWindow.h  KeyCodes.h  Keyboard.cpp  Keyboard.h  Layer.h  LayerManager.cpp  LayerManager.h  Logger.cpp  Logger.h  Mouse.cpp  Mouse.h  MouseCodes.h  PlatformDetection.h  Timestep.h  UUID.cpp  UUID.h  Window.cpp  Window.h
PaperEngine/src/PaperEngine/debug/: Instrumentor.cpp  Instrumentor.h
PaperEngine/src/PaperEngine/events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
PaperEngine/src/PaperEngine/graphics/: BindingLayout.h  BindingSet.cpp  BindingSet.h  Camera.cpp  Camera.h  ForwardPlusDepthRenderer.cpp  ForwardPlusDepthRenderer.h  GPUBuffer.cpp  GPUBuffer.h  GraphicsContext.cpp  GraphicsContext.h  GraphicsPipeline.cpp  GraphicsPipeline.h  IRenderer.h  IResource.h  Light.h  LightCullingPass.cpp  LightCullingPass.h  Material.cpp  Material.h  MaterialShader.h  Mesh.cpp  Mesh.h  MeshRenderer.cpp  MeshRenderer.h  SceneRenderer.cpp  SceneRenderer.h  Texture.cpp  Texture.h
PaperEngine/src/PaperEngine/imgui/: ImGuiInclude.cpp  ImGuiInclude.h  ImGuiLayer.cpp  ImGuiLayer.h  ImGuiUtils.cpp  ImGuiUtils.h  VulkanImGuiLayer.cpp  VulkanImGuiLayer.h
PaperEngine/src/PaperEngine/loader/: AssimpLoader.cpp  AssimpLoader.h  ModelLoader.cpp  STBInclude.cpp  STBInclude.h  TextureLoader.cpp  TextureLoader.h
PaperEngine/src/PaperEngine/renderer/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  CommandBuffer.cpp  CommandBuffer.h  DescriptorSet.cpp  DescriptorSet.h  DescriptorSetLayout.cpp  DescriptorSetLayout.h  Framebuffer.h  GraphicsContext.cpp  GraphicsContext.h  GraphicsPipeline.cpp  GraphicsPipeline.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshData.h  MeshRenderer.cpp  MeshRenderer.h  Model.h  RenderPass.cpp  RenderPass.h  RenderTexture.cpp  RenderTexture.h  Renderer.h  SceneRenderer.cpp  SceneRenderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
PaperEngine/src/PaperEngine/resourceManager/: ResourceManager.cpp  ResourceManager.h
PaperEngine/src/PaperEngine/scene/: Entity.cpp  Entity.h  Scene.cpp  Scene.h
PaperEngine/src/PaperEngine/scripting/: ScriptEngine.cpp  ScriptEngine.h
PaperEngine/src/PaperEngine/scripting/mono/: Assembly.cpp  Assembly.h  Domain.cpp  Domain.h
PaperEngine/src/PaperEngine/utils/: AABB.h  BoundingVolume.cpp  BoundingVolume.h  Clock.h  File.cpp  File.h  Frustum.cpp  Frustum.h  Transform.cpp  Transform.h
PaperEngine/src/Platform/Vulkan/: VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanCommandBufferManager.cpp  VulkanCommandBufferManager.h  VulkanContext.cpp  VulkanContext.h  VulkanDescriptorSet.cpp  VulkanDescriptorSet.h  VulkanDescriptorSetLayout.cpp  VulkanDescriptorSetLayout.h  VulkanDescriptorSetManager.cpp  VulkanDescriptorSetManager.h  VulkanFramebuffer.cpp  VulkanFramebuffer.h  VulkanGraphicsContext.cpp  VulkanGraphicsContext.h  VulkanGraphicsPipeline.cpp  VulkanGraphicsPipeline.h  VulkanImGuiLayer.cpp  VulkanImGuiLayer.h  VulkanMaterial.cpp  VulkanMaterial.h  VulkanMesh.cpp  VulkanMesh.h  VulkanMeshRenderer.cpp  VulkanMeshRenderer.h  VulkanPhysicalDeviceSelector.cpp  VulkanPhysicalDeviceSelector.h  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanSceneRenderer.cpp  VulkanSceneRenderer.h  VulkanShader.cpp  VulkanShader.h  VulkanStagingBuffer.cpp  VulkanStagingBuffer.h  (+6 more)
PaperEngine/src/Platform/Windows/core/: WindowsWindow.cpp  WindowsWindow.h
PaperEngineEditor/: CMakeLists.txt
PaperEngineEditor/src/: main.cpp
PaperEngineEditor/src/editor/: SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
PaperLoader/: CMakeLists.txt
PaperLoader/src/PaperLoader/: ModelData.h  ModelLoader.cpp  ModelLoader.h
Sandbox/: CMakeLists.txt
Sandbox/assets/shaders/test/: compile.bat  frag.spv  reflected.vert  shader.frag  shader.vert  vert.spv
Sandbox/src/: main.cpp
assets/PaperEngine/shader/LightCull/: compile.bat  lightCull.comp.spv  lightCull.hlsl
assets/PaperEngine/shader/preDepthPass/: compile.bat  shader.hlsl  shader.vert.spv
assets/PaperEngine/shader/utils/: nvrhi_helper.hlsli
assets/shaders/imgui/: compile.bat  shader.frag.spv  shader.hlsl  shader.vert.spv
assets/shaders/test/: shader.frag.spv  shader.hlsl  shader.vert.spv
assets/shaders/utils/: nvrhi_helper.hlsli
